[metadata]
name = akira-gb
long_description = file: README.md
author = eugenepy
author_email = eugenepy@gmail.com
license = apache license 2.0

[options]
python_requires = >= 3.6.5
packages = find:
test_suite = tests
install_requires = mkdocs-glightbox
                   mkdocs-material
                   mkdocs-material-extensions
                   mkdocs-altlink-plugin@git+https://github.com/cmitu/mkdocs-altlink-plugin/
[mypy]
ignore_missing_imports = True
